[tool.poetry]
name = "alz"
version = "0.1.0"
description = ""
authors = ["shaulab"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
loguru = "^0.7.2"
pydantic = "^2.9.2"
plotly = "^5.24.1"
nbformat = "^5.10.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
